--- a/src/app/paginas/mis-enigmas-escaperoom/crear-enigmas/crear-enigmas.component.html
+++ b/src/app/paginas/mis-enigmas-escaperoom/crear-enigmas/crear-enigmas.component.html
@@ -76,7 +76,7 @@
   </mat-tab-group>
 </div>
 <div class="enColumna">
-  <button type="button" class="btn Aceptar" (click)="Volver()">Mis Objetos</button>
+  <button type="button" class="btn Aceptar" (click)="Volver()">Mis Enigmas</button>
 </div>
 <br>
 
