--- a/src/app/paginas/mis-objetos-escaperoom/crear-objetos/crear-objetos.component.html
+++ b/src/app/paginas/mis-objetos-escaperoom/crear-objetos/crear-objetos.component.html
@@ -38,7 +38,7 @@
 
 
                       <div class="btnCambiarStep">
-                        <button class="btn Next" matStepperNext (click)= DatosObjeto() >Siguiente</button>
+                        <button class="btn Next" matStepperNext (click)= "DatosObjeto()" >Siguiente</button>
                       </div>
                     </form>
                     </mat-step>
