--- a/src/app/paginas/mis-escenarios-escaperoom/mis-escenarios-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-escenarios-escaperoom.component.html
@@ -39,7 +39,7 @@
           <img src="../assets/ash.png" class = "imagenPanelRecursos" />
         </div>
         <div class ="enFila" style = "width:40%; height: 30%">
-          <button type="button" (click) = "NavegarA('/crearSkins')" class="btn Aceptar">Ver</button>
+          <button type="button" (click) = "NavegarA('/misSkins')" class="btn Aceptar">Ver</button>
         </div>
       </div>
     </div>
