Fix Editing rxjs

--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/editar-escena-dialog/editar-escena-dialog.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/editar-escena-dialog/editar-escena-dialog.component.html
@@ -32,10 +32,10 @@
               </div>
             </div>
           
-
+            <div align="center">
             <button *ngIf="cambios" type="button" class="btn Aceptar"  (click)= "EditarEscena()">Aceptar Cambios <i class="material-icons">
                     check </i></button>
-
+                  </div>
 
 
     </mat-card-content>
