--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/agregar-escena-dialog/agregar-escena-dialog.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/agregar-escena-dialog/agregar-escena-dialog.component.html
@@ -56,7 +56,7 @@
           <span style="font-weight: bold;">Escenas creadas recientemente</span>
         </p>
       </div>
-      <table align="center" mat-table [dataSource]="EscenasAgregadas" class="example-container mat-elevation-z8">
+      <table align="center" mat-table [dataSource]="dataSourceMostrar" class="example-container mat-elevation-z8">
 
         <ng-container matColumnDef="nombreEscena">
           <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="width: 30%"> Nombre </th>
