--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/crear-mapa/crear-mapa.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/crear-mapa/crear-mapa.component.html
@@ -86,7 +86,7 @@
                           <button (click) = "ActivarInputEscenaArchivo()" type="button" class="btn Agregar">
                           Archivo de Escena <i class="material-icons">add_photo_alternate</i>
                           </button>
-                          <p *ngIf="archivoCargadoEscena"> {{nombreArchivoEscena}} </p>
+                          <p *ngIf="archivoCargadoEscena"> {{nombreArchivoEscenaMostrar}} </p>
                         </div>
                       </div>
 
@@ -106,7 +106,7 @@
                               </p>
                             </div>
 
-                            <table  align="center" mat-table [dataSource]="EscenasAgregadas" class="example-container mat-elevation-z8">
+                            <table  align="center" mat-table [dataSource]="dataSourceMostrar" class="example-container mat-elevation-z8">
 
                               <ng-container matColumnDef="nombreEscena">
                                 <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="width: 30%"> Nombre </th>
