--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mostrar-escenas-publicas/mostrar-escenas-publicas.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mostrar-escenas-publicas/mostrar-escenas-publicas.component.html
@@ -9,15 +9,14 @@
               <span style="font-weight: bold;">Nombre: </span>
               <label style="background-color: transparent">{{nombreEscenario}}</label>
               <br>
-              <br>
-              <p style="background-color: transparent; font-size: 70%">{{descripcionEscenario}}</p>
+              <br>              
+              <span style="font-weight: bold;">Descripción: </span>
+              <p style="background-color: transparent; font-size: 100%">{{descripcionEscenario}}</p>
               <br>
         </div>
     </div>
-    <br>
-    <br>
     <mat-divider class="lineaDivisoria"></mat-divider>
-    <mat-grid-list cols="3" rowHeight="100px" style="width: 100%;" gutterSize="10px">
+    <mat-grid-list cols="3" rowHeight="80px" style="width: 100%;" gutterSize="10px">
       <mat-grid-tile
           *ngFor="let escena of EscenasdeEscenario; let i = index"
           [colspan]="1"
@@ -29,17 +28,15 @@
                 <p style="color:black; margin-top: 10%;margin-bottom: 5%; font-weight: bold">{{escena.Nombre}}</p>
             
               </div>
-          <!-- <mat-card-content style="display: flex; align-items: center;justify-content: center;"> -->
-            <br>
-            <!--class="posicionImagen"-->
-            <div style="margin-top: 15px; max-width: 60%; max-height: 50%;" >
-              <img class ="imagenEscenaEscaperoom" *ngIf="imagenesEscenas[i]"  mat-card-image [src]="imagenesEscenas[i]" >
-            </div>
-           
+              <br>
+              <div style="margin-top: 15px; max-width: 60%; max-height: 50%;" >
+                <img class ="imagenEscenaEscaperoom" *ngIf="imagenesEscenas[i]"  mat-card-image [src]="imagenesEscenas[i]" >
+              </div>
             </div>
       </mat-grid-tile>
     </mat-grid-list>
-
+    <br>
+    <br>
     <button type="button" class="btn Back" (click)="goBack()">Volver </button>
 
 
