--- a/src/app/paginas/mis-objetos-escaperoom/mostrar-objetos-publicos/mostrar-objetos-publicos.component.html
+++ b/src/app/paginas/mis-objetos-escaperoom/mostrar-objetos-publicos/mostrar-objetos-publicos.component.html
@@ -5,26 +5,15 @@
   <div class= "enColumna">
   <mat-card class="panel">
     <mat-card-content>
-
-
-            <div class="texto" style=" text-align: left;">
-                <mat-form-field style="margin: 15px;">
-                    <mat-label style="color: white;">Nombre </mat-label>
-                    <mat-label style="background-color: transparent">{{nombreObjeto}}</mat-label>
-                  </mat-form-field>
-                <br>
-                <br>
-                <mat-form-field appearance="fill">
-                  <mat-label>Tipo</mat-label>
-                  <mat-label style="background-color: transparent">{{tipoObjeto}}</mat-label>
-                </mat-form-field>
-            </div>
-
-            <div class="enFila" style="width: 100%">
-              <div>
-                <img class="imagenObjeto" *ngIf="imagenObjeto" mat-card-image [src]="imagenObjeto">
-              </div>
-            </div>
+      <div class="enColumna">
+        <div class="texto" style=" text-align: center;">
+          <mat-label style="color: white;">Nombre: </mat-label>
+          <mat-label style="background-color: transparent">{{nombreObjeto}}</mat-label>
+        </div>
+        <br>
+        <br>
+          <img style="max-width: 30%; max-height: 30%;" class="imagenObjeto" *ngIf="imagenObjeto" mat-card-image [src]="imagenObjeto">
+      </div>
     </mat-card-content>
   </mat-card>
 
