--- a/src/app/paginas/mis-skins-escaperoom/mis-skins-escaperoom.component.html
+++ b/src/app/paginas/mis-skins-escaperoom/mis-skins-escaperoom.component.html
@@ -27,7 +27,7 @@
             <ng-container matColumnDef="iconos">
                 <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
                 <td  mat-cell *matCellDef="let skin">
-                  <div  style = "display: flex; align-items: right">
+                  <div  align="right">
                     <button  (click) = "VerSkinDialog(skin)" mat-icon-button matTooltip="Ver la skin">
                       <i class="material-icons green md-36">edit</i>
                     </button>
@@ -37,14 +37,13 @@
                     <button (click) = "Descargar(skin)" mat-icon-button matTooltip="Descargar skin">
                       <i class="material-icons blue md-36">get_app</i>
                     </button>
-                    <!-- TODAVÍA NO ESTÁ CLARA LA ESTRATEGIA DE PUBLICACION DE ESCENARIOS EN LA APP 
-                    <button *ngIf = "!coleccion.Publica" (click) = "HazPublica(coleccion)" mat-icon-button matTooltip="Haz pública la colección">
+                   <button *ngIf = "!skin.Publica" (click) = "HazPublica(skin)" mat-icon-button matTooltip="Haz pública la colección">
                       <i class="material-icons grey md-36">public_off</i>
                     </button>
-                    <button *ngIf = "coleccion.Publica" (click) = "HazPrivada(coleccion)" mat-icon-button matTooltip="Haz privada la colección">
+                    <button *ngIf = "skin.Publica" (click) = "HazPrivada(skin)" mat-icon-button matTooltip="Haz privada la colección">
                       <i class="material-icons green md-36">public</i>
                     </button>
-                    -->
+                    
                   </div>
               </td>
             </ng-container>
@@ -86,12 +85,14 @@
             <ng-container matColumnDef="iconos">
               <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
               <td mat-cell *matCellDef="let skin">
-                <button (click) = "VerSkinPublicaDialog(skin)" mat-icon-button matTooltip="Ver la skin">
-                  <i class="material-icons green md-36">visibility</i>
-                </button>
-                <button (click) = "Descargar(skin)" mat-icon-button matTooltip="Descargar skin">
-                  <i class="material-icons blue md-36">get_app</i>
-                </button>
+                <div align="right">
+                  <button (click) = "VerSkinPublicaDialog(skin)" mat-icon-button matTooltip="Ver la skin">
+                    <i class="material-icons green md-36">visibility</i>
+                  </button>
+                  <button (click) = "Descargar(skin)" mat-icon-button matTooltip="Descargar skin">
+                    <i class="material-icons blue md-36">get_app</i>
+                  </button>
+                </div>
               </td>
             </ng-container>
 
