--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2367,9 +2367,9 @@
                       {{presencial.nombre}}
                     </mat-chip>
                   </mat-chip-list>
-  
+                  
                   <span *ngIf = "modalidadPresencialSeleccionada" style ="font-weight: bold;color:green;"> Has elegido ... {{modalidadPresencialSeleccionada}}</span>
-  
+                  
                 </div>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
@@ -2377,7 +2377,7 @@
                 </div>
               </mat-step>
 
-              <!-- Elijo si es Online o no-->
+              <!-- Elijo si es Online o no -->
               <mat-step>
               <ng-template matStepLabel><div>Online</div></ng-template>
               <div>
@@ -2398,8 +2398,32 @@
                 <button [disabled]="!tengoOnline" type="button" class="btn Next" matStepperNext>Siguiente</button>
               </div>
             </mat-step>
-              
-              
+            
+            <!-- Elijo Mecánica especial y tiempoLimite -->
+            <mat-step>
+              <ng-template matStepLabel><div>Tiempo Límite y Mecánica General</div></ng-template>
+              <div>                
+                <label class = "LabelStepper">Elige tiempo y mecánica del juego:</label>
+                <span style="font-weight: bold;">Tiempo: </span>
+                <input style="background-color: transparent" type="text" name="nombre" placeholder="Escribe el tiempo en minutos(0 si no tiene)" (keyup) = "TengoTiempoLimiteEscaperoom()" requiered [(ngModel)]="tiempoLimiteEscaperoom" [ngModelOptions]="{standalone: true}">
+                <br>
+                <br>                  
+                <mat-label>Mecánica General</mat-label>
+                <mat-select name="Types" placeholder="Selecciona la mecánica" [(ngModel)]="selectedMecanica" [ngModelOptions]="{standalone: true}" required>
+                  <mat-option *ngFor="let type of mecanicasEscaperoom" [value]="type.id" matTooltip={{type.descripcion}}>
+                    {{type.nombre}}
+                  </mat-option>
+                </mat-select>
+                <br>
+                <span *ngIf = "tengoTiempoLimite" style ="font-weight: bold;color:green;"> Has elegido ... {{selectedMecanica}} y un tiempo Límite de ... {{tiempoLimiteEscaperoom}}</span>
+                <br>
+              </div>
+              <div class="btnCambiarStep">
+                <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
+                <button [disabled]="!tengoTiempoLimite" type="button" class="btn Next" matStepperNext>Siguiente</button>
+              </div>
+            </mat-step>
+
               
               <!--Escogemos el escenario-->
 
@@ -2409,15 +2433,13 @@
                 </ng-template>
                 <label class="LabelStepper" style = "font-size: larger; font-weight: bolder;">Selecciona el escenario</label>
               
-                <app-asigna-escenario (emisorEscenario)="RecibeEscenario ($event)">
-                </app-asigna-escenario>
+                <app-asignar-escenario-escaperoom (emisorEscenario)="RecibeEscenarioEscaperoom($event)">
+                </app-asignar-escenario-escaperoom>
               
-                <span *ngIf="tengoEscenario" style="font-weight: bold;color:green;"> Has elegido ...
-                  {{tipoDeJuegoSeleccionado}}... {{tipoJuegoCompeticionSeleccionado}} ... {{modoDeJuegoSeleccionado}}
-                  ... {{escenario.Mapa}} </span>
+                <span *ngIf="tengoEscenarioEscaperoom" style="font-weight: bold;color:green;"> Has elegido ... {{escenarioEscaperoomRecibido.Nombre}} </span>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
-                  <button [disabled]="!tengoEscenario" type="button" class="btn Next"
+                  <button [disabled]="!tengoEscenarioEscaperoom" type="button" class="btn Next"
                     matStepperNext>Siguiente</button>
                 </div>
               </mat-step>
