--- a/src/styles.scss
+++ b/src/styles.scss
@@ -584,6 +584,13 @@ span.album5col {
 
 }
 
+.imagenObjeto{
+  max-width: 80px;
+  max-height: 80px;
+  margin-top: 0px !important;
+  margin: 0px;
+}
+
 .cromo {
   max-width: var(--anchoCromo);
   max-height: var(--altoCromo);
