--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-escenario-escaperoom/asignar-escenario-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-escenario-escaperoom/asignar-escenario-escaperoom.component.html
@@ -29,7 +29,7 @@
     
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        (click)="selection.toggle(row)">
+        (click)="Marcar(row)">
     </tr>
 
   </table>
