--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2408,16 +2408,19 @@
                 <input style="background-color: transparent" type="text" name="nombre" placeholder="Escribe el tiempo en minutos(0 si no tiene)" (keyup) = "TengoTiempoLimiteEscaperoom()" requiered [(ngModel)]="tiempoLimiteEscaperoom" [ngModelOptions]="{standalone: true}">
                 <br>
                 <br>                  
-                <mat-label>Mecánica General</mat-label>
+                <span style="font-weight: bold;">Mecánica General</span>
+                <br>
                 <mat-select name="Types" placeholder="Selecciona la mecánica" [(ngModel)]="selectedMecanica" [ngModelOptions]="{standalone: true}" required>
                   <mat-option *ngFor="let type of mecanicasEscaperoom" [value]="type.id" matTooltip={{type.descripcion}}>
                     {{type.nombre}}
                   </mat-option>
                 </mat-select>
                 <br>
+                <br>
                 <span *ngIf = "tengoTiempoLimite" style ="font-weight: bold;color:green;"> Has elegido ... {{selectedMecanica}} y un tiempo Límite de ... {{tiempoLimiteEscaperoom}}</span>
                 <br>
               </div>
+              
               <div class="btnCambiarStep">
                 <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
                 <button [disabled]="!tengoTiempoLimite" type="button" class="btn Next" matStepperNext>Siguiente</button>
@@ -2439,24 +2442,83 @@
                 <span *ngIf="tengoEscenarioEscaperoom" style="font-weight: bold;color:green;"> Has elegido ... {{escenarioEscaperoomRecibido.Nombre}} </span>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
-                  <button [disabled]="!tengoEscenarioEscaperoom" type="button" class="btn Next"
+                  <button [disabled]="!hayEscenas" type="button" class="btn Next"
                     matStepperNext>Siguiente</button>
                 </div>
               </mat-step>
 
-              <!--Añadir preguntas-->
+              <!--Añadir Escenas-->
               <mat-step>
                 <ng-template matStepLabel>
-                  <div>Preguntas</div>
+                  <div>Escenas</div>
                 </ng-template>
-                <div>
-                  <button type="button" class="btn Agregar" (click)="AbrirDialogoAgregarPreguntas()"
-                    style="width: auto;">Añadir preguntas<i class="material-icons">
+                <div align="center">
+                  <span *ngIf="!tengoTiempos" style="font-weight: bold;color:red;"> Hacen falta {{tiempoRestante}} minutos para cumplir con el tiempo límite del escenario ( {{tiempoLimiteEscaperoom}} )</span>
+                </div>
+                <br>
+                <form style = "width: 100%"  *ngIf="tengoEscenasEscaperoom;else Aviso_no_escenas">
+
+                  <div class = "filter">
+                    <mat-form-field>
+                      <input matInput (keyup)="applyFilterEscenas($event.target.value)" placeholder="Filtro para buscar escenas añadidas...">
+                      <i class="material-icons" matSuffix>search</i>
+                    </mat-form-field>
+                  </div>
+                  <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceEscenas" class="mat-elevation-z8">
+        
+                    <ng-container matColumnDef="Orden">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Orden </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.Orden}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Nombre">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.Nombre}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Tiempo Limite">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Tiempo Limite </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.TiempoLimite}} minutos </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Requisito">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Requisito </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.Requisito}}<span *ngIf="escena.Requisito=='puntos'"> : {{escena.Puntosrequisito}}</span> </td>
+                    </ng-container>
+        
+                    <ng-container matColumnDef="Iconos">
+                        <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+                        <td  mat-cell *matCellDef="let escena">
+                          <div align="right">
+                            <button  (click) = "VerEscenas(escena)" mat-icon-button matTooltip="Ver la escena">
+                              <i class="material-icons green md-36">edit</i>
+                            </button>
+                            <button (click) = "AbrirDialogoConfirmacionBorrarEscena(escena)" mat-icon-button matTooltip="Eliminar la escena">
+                              <i class="material-icons red md-36">delete</i>
+                            </button>
+                          </div>
+                      </td>
+                    </ng-container>
+        
+                    <tr mat-header-row *matHeaderRowDef="displayedColumnsEscenas"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumnsEscenas;">
+                    </tr>
+                  </table>
+                </form>
+                <div class="contenedor">
+                  <ng-template  #Aviso_no_escenas><div class="texto">No tienes escenas todavía</div></ng-template>
+                </div>
+                <br>
+                <div align="center">
+                  <button type="button" class="btn Agregar" (click)="AbrirDialogoAgregarEscena()"
+                    style="width: auto;">Añadir Escena<i class="material-icons">
                       post_add </i></button>
                 </div>
+                <br>
+                <br>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
-                  <button [disabled]="!tengoPreguntas" type="button" class="btn Next"
+                  <button [disabled]="!tengoTiempos" type="button" class="btn Next"
                     matStepperNext>Siguiente</button>
                 </div>
               </mat-step>
@@ -2509,7 +2571,7 @@
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
                   <button style="width: 60%" type="button" class="btn Aceptar"
-                    (click)="CrearJuegoDeGeocaching()">Crear juego de geocaching</button>
+                    (click)="CrearJuegoDeEscaperoom()">Crear juego de escaperoom</button>
                 </div>
               </mat-step>
 
