--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
@@ -72,7 +72,7 @@
   </form>
 
   <div  *ngIf="tengoEscena" class = "enColumna" align="center">
-    <button style = "width: 20%" (click)="AsignarEscena()" [disabled]="!tengoEscena" type="button" class="btn Aceptar">Asignar escenario</button>
+    <button style = "width: 20%" (click)="AsignarEscena()" [disabled]="!tengoEscena" type="button" class="btn Aceptar">Asignar escena</button>
   </div>
 <br>
 
