--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2490,7 +2490,7 @@
                         <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
                         <td  mat-cell *matCellDef="let escena">
                           <div align="right">
-                            <button  (click) = "VerEscenas(escena)" mat-icon-button matTooltip="Ver la escena">
+                            <button  (click) = "EditarEscenasActivas(escena)" mat-icon-button matTooltip="Ver la escena">
                               <i class="material-icons green md-36">edit</i>
                             </button>
                             <button (click) = "AbrirDialogoConfirmacionBorrarEscena(escena)" mat-icon-button matTooltip="Eliminar la escena">
