--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2518,51 +2518,149 @@
                 <br>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
-                  <button [disabled]="!tengoTiempos" type="button" class="btn Next"
+                  <button [disabled]="!tengoTiempos" type="button" class="btn Next" (click)="CrearRequisitos()"
                     matStepperNext>Siguiente</button>
                 </div>
               </mat-step>
 
 
 
-              <!--Tercer paso, establecemos la puntuacion-->
+              <!--Añadir Objetos-->
               <mat-step>
                 <ng-template matStepLabel>
-                  <div>Puntuación</div>
+                  <div>Objetos</div>
                 </ng-template>
 
-                <mat-form-field>
-                  <mat-label>Introduzca la puntuacion por respuesta correcta</mat-label>
-                  <input matInput formControlName="PuntuacionCorrectaGeo" placeholder="Escriba la puntuacion"
-                    requiered>
-                </mat-form-field>
+                <form style = "width: 100%"  *ngIf="tengoEscenasEscaperoom;else Aviso_no_escenas">
 
-                <mat-form-field>
-                  <mat-label>Introduzca la puntuacion por respuesta incorrecta (si no quiere restar ponga 0)
-                  </mat-label>
-                  <input matInput formControlName="PuntuacionIncorrectaGeo" placeholder="Escriba la puntuacion"
-                    requiered>
-                </mat-form-field>
+                  <div class = "filter">
+                    <mat-form-field>
+                      <input matInput (keyup)="applyFilterEscenas($event.target.value)" placeholder="Filtro para buscar escenas añadidas...">
+                      <i class="material-icons" matSuffix>search</i>
+                    </mat-form-field>
+                  </div>
+                  <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceEscenas" class="mat-elevation-z8">
+        
+                    
+                    <ng-container matColumnDef="select">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla">
+                      </th>
 
-                <mat-form-field>
-                  <mat-label>Introduzca el porcentaje a sumar por respuesta bonus correcta </mat-label>
-                  <input matInput formControlName="PuntuacionCorrectaGeoBonus" placeholder="Escriba el porcentaje"
-                    requiered>
-                </mat-form-field>
+                      <td mat-cell *matCellDef="let row;">
+                        <mat-checkbox
+                                (click)="$event.stopPropagation()"
+                                (change)="MarcarEscenaObjeto(row)"
+                                [checked]="selection.isSelected(row)">
+                        </mat-checkbox>
+                      </td>
+                    </ng-container>
 
-                <mat-form-field>
-                  <mat-label>Introduzca el porcentaje a restar por respuesta bonus incorrecta </mat-label>
-                  <input matInput formControlName="PuntuacionIncorrectaGeoBonus" placeholder="Escriba el porcentaje"
-                    requiered>
-                </mat-form-field>
+                    <ng-container matColumnDef="Orden">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Orden </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.Orden}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Nombre">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.Nombre}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Tiempo Limite">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Tiempo Limite </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.TiempoLimite}} minutos </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Requisito">
+                      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Requisito </th>
+                      <td mat-cell *matCellDef="let escena"> {{escena.Requisito}}<span *ngIf="escena.Requisito=='puntos'"> : {{escena.Puntosrequisito}}</span> </td>
+                    </ng-container>        
+                    
+        
+                    <tr mat-header-row *matHeaderRowDef="displayedColumnsEscenasObjetos"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumnsEscenasObjetos;"
+                    (click)="MarcarEscenaObjeto(row)">
+                    </tr>
+                  </table>
+                  
+                </form>
+                <div class="contenedor">
+                  <ng-template  #Aviso_no_escenas><div class="texto">No tienes escenas todavía</div></ng-template>
+                </div>
+
+                <div *ngIf="escenaSeleccionada">
+                  <form style = "width: 100%"  *ngIf="tengoObjetosEscena;else Aviso_no_objetos">
+
+                    <div class = "filter">
+                      <mat-form-field>
+                        <input matInput (keyup)="applyFilterObjetosEscena($event.target.value)" placeholder="Filtro para buscar escenas añadidas...">
+                        <i class="material-icons" matSuffix>search</i>
+                      </mat-form-field>
+                    </div>
+                    <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceObjetosEscena" class="mat-elevation-z8">
+          
+                      <ng-container matColumnDef="Nombre">
+                        <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+                        <td mat-cell *matCellDef="let objeto"> {{objeto.Nombre}} </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="Tipo">
+                        <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Tipo </th>
+                        <td mat-cell *matCellDef="let objeto"> {{objeto.Nombre}} </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="Lugar">
+                        <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Lugar </th>
+                        <td mat-cell *matCellDef="let objeto"> {{objeto.Lugar}} minutos </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="Es Requisito">
+                        <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Es Requisito </th>
+                        <td mat-cell *matCellDef="let objeto"> {{objeto.Requisito}} </td>
+                      </ng-container>
+          
+                      <ng-container matColumnDef="Iconos">
+                          <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+                          <td  mat-cell *matCellDef="let objeto">
+                            <div align="right">
+                              <button  (click) = "EditarObjetoActivo(objeto)" mat-icon-button matTooltip="Ver la escena">
+                                <i class="material-icons green md-36">edit</i>
+                              </button>
+                              <button (click) = "AbrirDialogoConfirmacionBorrarObjeto(objeto)" mat-icon-button matTooltip="Eliminar la escena">
+                                <i class="material-icons red md-36">delete</i>
+                              </button>
+                            </div>
+                        </td>
+                      </ng-container>
+          
+                      <tr mat-header-row *matHeaderRowDef="displayedColumnsObjetos"></tr>
+                      <tr mat-row *matRowDef="let row; columns: displayedColumnsObjetos;">
+                      </tr>
+                    </table>
+                  </form>
+                  <div class="contenedor">
+                    <ng-template  #Aviso_no_objetos><div class="texto">No tienes objetos todavía</div></ng-template>
+                  </div>
+
+                </div>
+                <br>
+                <br>
+                <div align="center">
+                  <button type="button" class="btn Agregar" (click)="AbrirDialogoAgregarObjeto()"
+                    style="width: auto;">Añadir Objeto<i class="material-icons">
+                      post_add </i></button>
+                </div>
+
+                <br>
+                <br>
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" matStepperPrevious>Atrás</button>
-                  <button [disabled]="!TengoPuntuacionesGeocatching()" (click)="GuardarPuntuacionGeocaching()"
-                    type="button" class="btn Next" matStepperNext>Siguiente</button>
+                  <button [disabled]="!tengoRequisitos" type="button" class="btn Next"
+                    matStepperNext>Siguiente</button>
                 </div>
               </mat-step>
-              <!--Cuarto paso, finalizamos-->
 
+
+              <!--Cuarto paso, finalizamos-->
               <mat-step>
                 <ng-template matStepLabel>
                   <div>Finalizar</div>
